--- a/work2/requirements.txt
+++ b/work2/requirements.txt
@@ -20,12 +20,13 @@ ipython-genutils==0.2.0
 ipywidgets==8.1.5
 isort==5.13.2
 jedi==0.19.1
+Jinja2==3.1.4
 joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
--e git+https://github.com/ZachParent/mai-intro-to-machine-learning.git@125c5b913cf37a3a45b11e40e75095b71c6398da#egg=mai_iml_work2&subdirectory=work2
+MarkupSafe==3.0.2
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mccabe==0.7.0
