--- a/work2/Makefile
+++ b/work2/Makefile
@@ -44,8 +44,14 @@ format:
 ## Set up python interpreter environment
 .PHONY: create_environment
 create_environment:
-	@bash -c "if [ ! -z `which virtualenvwrapper.sh` ]; then source `which virtualenvwrapper.sh`; mkvirtualenv $(PROJECT_NAME) --python=$(PYTHON_INTERPRETER); else mkvirtualenv.bat $(PROJECT_NAME) --python=$(PYTHON_INTERPRETER); fi"
-	@echo ">>> New virtualenv created. Activate with:\nworkon $(PROJECT_NAME)"
+	@echo "Creating Python virtual environment..."
+	@if [ "$(OS)" = "Windows_NT" ]; then \
+		python -m venv .venv && \
+		echo ">>> New virtualenv created. Activate with:\n.venv\Scripts\activate"; \
+	else \
+		python3 -m venv .venv && \
+		echo ">>> New virtualenv created. Activate with:\nsource .venv/bin/activate"; \
+	fi
 	
 
 
