--- a/work2/requirements.txt
+++ b/work2/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.4
 asttokens==2.4.1
 black==24.10.0
+circlify==0.15.0
 click==8.1.7
 comm==0.2.2
 contourpy==1.3.0
@@ -10,6 +11,7 @@ decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
 flake8==7.1.1
+fontawesomefree==6.6.0
 fonttools==4.53.1
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
@@ -51,6 +53,7 @@ pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+pywaffle==1.1.1
 pyzmq==26.2.0
 scikit-learn==1.5.2
 scipy==1.13.1
