make setup working + make_requirement changed to work on both windows and mac

--- a/work2/Makefile
+++ b/work2/Makefile
@@ -5,6 +5,7 @@
 PROJECT_NAME = mai-iml-work2
 PYTHON_VERSION = 3.9
 PYTHON_INTERPRETER = python
+ENV_NAME = .venv
 
 #################################################################################
 # COMMANDS                                                                      #
@@ -22,6 +23,7 @@ requirements:
 
 ## Delete all compiled Python files
 .PHONY: clean
+
 clean:
 	find . -type f -name "*.py[co]" -delete
 	find . -type d -name "__pycache__" -delete
@@ -39,22 +41,35 @@ format:
 	black --config pyproject.toml tools
 
 
-
-
-## Set up python interpreter environment
 .PHONY: create_environment
 create_environment:
-	@echo "Creating Python virtual environment..."
-	@if [ "$(OS)" = "Windows_NT" ]; then \
-		python -m venv .venv && \
-		echo ">>> New virtualenv created. Activate with:\n.venv\Scripts\activate"; \
-	else \
-		python3 -m venv .venv && \
-		echo ">>> New virtualenv created. Activate with:\nsource .venv/bin/activate"; \
-	fi
-	
+ifeq ($(OS),Windows_NT)
+	python -m venv ${ENV_NAME} && \
+	echo ">>> New virtualenv created. Activate with:\n.venv\Scripts\activate"
+else
+	python3 -m venv ${ENV_NAME}
+	echo ">>> New virtualenv created. Activate with:\n.venv\Scripts\activate"
+endif
 
 
+## Complete project setup from fresh clone
+.PHONY: setup
+
+# Define activation command based on OS
+ifeq ($(OS),Windows_NT)
+    VENV_DIR = .venv\Scripts
+    ACTIVATE_CMD = call $(VENV_DIR)\activate.bat &&
+else
+    VENV_DIR = .venv/bin
+    ACTIVATE_CMD = . $(VENV_DIR)/activate &&
+
+endif
+
+setup: create_environment
+	@echo ">>> Setting up complete project environment..."
+	$(ACTIVATE_CMD) $(MAKE) requirements && $(MAKE) format && echo ">>> Setup complete. Run base project with: python run.py --dataset_name [mushroom|hepatitis]"
+
+.PHONY: run
 
 #################################################################################
 # PROJECT RULES                                                                 #
