added make run (lint not working)

--- a/work2/Makefile
+++ b/work2/Makefile
@@ -52,8 +52,8 @@ else
 endif
 
 
-## Complete project setup from fresh clone
-.PHONY: setup
+## Complete project setup and run from fresh clone
+.PHONY: run create_environment
 
 # Define activation command based on OS
 ifeq ($(OS),Windows_NT)
@@ -62,14 +62,28 @@ ifeq ($(OS),Windows_NT)
 else
     VENV_DIR = .venv/bin
     ACTIVATE_CMD = . $(VENV_DIR)/activate &&
-
 endif
 
+run: create_environment
+	@echo ">>> Running both datasets..."
+	
+	@echo "\n>>> Running hepatitis dataset..."
+	$(ACTIVATE_CMD) python tools/run.py --dataset_name hepatitis
+	$(ACTIVATE_CMD) python tools/analysis/run_statistical_analysis.py --dataset_name hepatitis
+	
+	@echo "\n>>> Running mushroom dataset..."
+	$(ACTIVATE_CMD) python tools/run.py --dataset_name mushroom
+	$(ACTIVATE_CMD) python tools/analysis/run_statistical_analysis.py --dataset_name mushroom
+	
+	@echo ">>> Completed running all datasets. Running dataset analysis..."
+	$(ACTIVATE_CMD) python tools/analysis/run_dataset_analysis.py
+
+# Keep your existing setup target
 setup: create_environment
 	@echo ">>> Setting up complete project environment..."
 	$(ACTIVATE_CMD) $(MAKE) requirements && $(MAKE) format && echo ">>> Setup complete. Run base project with: python run.py --dataset_name [mushroom|hepatitis]"
 
-.PHONY: run
+
 
 #################################################################################
 # PROJECT RULES                                                                 #
