makefile updated (make all)

--- a/work3/Makefile
+++ b/work3/Makefile
@@ -23,13 +23,30 @@ ZIP_FILE_NAME = $(SUBMISSION_NAME).zip
 
 ## Run all scripts
 .PHONY: all
-all:
+all: clean-outputs run-preprocessing run-models run-metrics run-analysis
+
+.PHONY: run-preprocessing
+run-preprocessing:
+	@echo ">>> Running preprocessing for all datasets..."
+	$(PYTHON_INTERPRETER) src/scripts/1_run_preprocessing.py
 
 ## Delete all compiled Python files
 .PHONY: clean
 clean:
 	find . -type f -name "*.py[co]" -delete
 	find . -type d -name "__pycache__" -delete
+
+## Perform statistical analysis on results
+.PHONY: run-analysis
+run-analysis:
+	@echo ">>> Performing statistical analysis on results..."
+	$(PYTHON_INTERPRETER) src/scripts/4_run_analysis.py
+
+## Calculate metrics for all clustered datasets
+.PHONY: run-metrics
+run-metrics:
+	@echo ">>> Calculating metrics for all clustered datasets..."
+	$(PYTHON_INTERPRETER) src/scripts/3_run_metrics.py
 
 ## Clean output directories
 .PHONY: clean-outputs
