disable fuzzy_cmeans global_kmeans gmeans, in Makefile until they are more optimized

--- a/work3/Makefile
+++ b/work3/Makefile
@@ -40,13 +40,13 @@ clean:
 .PHONY: run-analysis
 run-analysis:
 	@echo ">>> Performing statistical analysis on results..."
-	$(PYTHON_INTERPRETER) src/scripts/4_run_analysis.py
+	$(PYTHON_INTERPRETER) src/scripts/4_run_analysis.py --verbose
 
 ## Calculate metrics for all clustered datasets
 .PHONY: run-metrics
 run-metrics:
 	@echo ">>> Calculating metrics for all clustered datasets..."
-	$(PYTHON_INTERPRETER) src/scripts/3_run_metrics.py
+	$(PYTHON_INTERPRETER) src/scripts/3_run_metrics.py --verbose
 
 ## Clean output directories
 .PHONY: clean-outputs
@@ -55,10 +55,12 @@ clean-outputs:
 	rm -f data/2_clustered/*
 	rm -f data/3_metrics/*
 
+# TODO: enable gmeans and global_kmeans
+## Run all models for all datasets
 .PHONY: run-models
 run-models:
 	for dataset in hepatitis mushroom vowel synthetic; do \
-		for model in kmeans fuzzy_cmeans improved_kmeans_A improved_kmeans_B optics spectral_clustering; do \
+		for model in kmeans optics spectral_clustering; do \
 			python src/scripts/2_run_model.py --dataset=$$dataset --model=$$model --verbose; \
 		done; \
 	done
