--- a/work3/Makefile
+++ b/work3/Makefile
@@ -51,9 +51,9 @@ run-metrics:
 ## Clean output directories
 .PHONY: clean-outputs
 clean-outputs:
-	rm -f data/1_preprocessed/*
-	rm -f data/2_clustered/*
-	rm -f data/3_metrics/*
+	rm -rf data/1_preprocessed/*
+	rm -rf data/2_clustered/*
+	rm -rf data/3_metrics/*
 
 # TODO: enable gmeans and global_kmeans
 ## Run all models for all datasets
