add vowel to run-models

--- a/work3/Makefile
+++ b/work3/Makefile
@@ -39,7 +39,7 @@ run-preprocessing:
 ## Run all models for all datasets
 .PHONY: run-models
 run-models:
-	for dataset in synthetic hepatitis mushroom; do \
+	for dataset in synthetic hepatitis vowel mushroom; do \
 		for model in kmeans fuzzy_cmeans gmeans global_kmeans optics spectral_clustering; do \
 			python src/scripts/2_run_model.py --dataset=$$dataset --model=$$model --verbose; \
 		done; \
