--- a/work2/pyproject.toml
+++ b/work2/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["flit_core >=3.2,<4", "setuptools>=74.1.2"]
 build-backend = "flit_core.buildapi"
 
 [project]
