--- a/work2/requirements.txt
+++ b/work2/requirements.txt
@@ -11,6 +11,7 @@ decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
 flake8==7.1.1
+flit_core==3.10.1
 fontawesomefree==6.6.0
 fonttools==4.53.1
 importlib_metadata==8.5.0
