--- a/work4/requirements.txt
+++ b/work4/requirements.txt
@@ -5,12 +5,15 @@ importlib_resources==6.4.5
 Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.7
+llvmlite==0.43.0
 MarkupSafe==3.0.2
 matplotlib==3.9.3
+numba==0.60.0
 numpy==2.0.2
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+pynndescent==0.5.13
 pypalettes==0.1.4
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
@@ -20,5 +23,7 @@ scipy==1.13.1
 seaborn==0.13.2
 six==1.16.0
 threadpoolctl==3.5.0
+tqdm==4.67.1
 tzdata==2024.2
+umap-learn==0.5.7
 zipp==3.21.0
