--- a/work4/.gitignore
+++ b/work4/.gitignore
@@ -171,3 +171,6 @@ cython_debug/
 # large intermediate files
 data/2_reduced/*
 data/3_clustered/*
+data/5_metrics_plots/*
+data/5_metrics_tables/*
+data/6_visualizations/*
